--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body {
     background-color: #add8e6;
 }
+
+h1 {
+    font-size: 2.5em;
+    text-align: center;
+    margin-top: 40px;
+}
+
+h2 {
+    font-size: 1.5em;
+    text-align: center;
+    margin-top: 10px;
+}
